styles/globals.css
body {
  background-image: url(/background.svg);
  background-size: 100%;
  background-attachment: fixed;
}

.pixsoil {
  font-family: 'Oleo Script', cursive;
  font-size: 5rem;
  color: #815115;
  margin: 5rem auto;
}

.mobile {
  position: relative;
  display: inline-block;
  width: 242px;
  margin-top: calc((100vh - 508px) / 2);
}

@media screen and (max-width: 877px) {
  .mobile {
    margin-top: 4rem;
  }
}

.mobile video {
  width: 220px;
  position: absolute;
  top: 10px;
  left: 9px;
}

.mobile .frame {
  width: 242px;
  height: 508px;
  position: absolute;
  top: 0;
  left: 0;
}

